# stock-data-analysis-mcp

./: .gitignore  Nifty-50.xlsx  README.md  client.py  main.py  pyproject.toml  requirements.txt  server.py
