[project]
name = "Data-mcp-server"
version = "0.1.0"
description = "Model Context Protocol for stock data analysis "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=2.10.3",
    "langchain>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.0.10",
    "langchain-groq>=0.3.2",
    "matplotlib>=3.10.3",
    "mcp[cli]>=1.9.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pydrive>=1.3.1",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
]
